# Multi-agent-insurance-project

./: LICENSE  README.md
multi-agent-insurance-project-main/: .env.example  .gitignore  README.md  pyproject.toml
multi-agent-insurance-project-main/app/: config.py  exceptions.py  logging_config.py  main.py
multi-agent-insurance-project-main/app/agents/: base.py  billing.py  claims.py  escalation.py  final_answer.py  general_help.py  graph.py  policy.py  supervisor.py
multi-agent-insurance-project-main/app/models/: db.py  schemas.py  state.py
multi-agent-insurance-project-main/app/prompts/: billing.py  claims.py  escalation.py  final_answer.py  general_help.py  policy.py  react_instructions.py  supervisor.py
multi-agent-insurance-project-main/app/routes/: chat.py  events.py
multi-agent-insurance-project-main/app/services/: context.py  database.py  llm.py  rag.py  session.py
multi-agent-insurance-project-main/app/static/: index.html
multi-agent-insurance-project-main/app/tools/: __init__.py  billing_tools.py  claims_tools.py  policy_tools.py  registry.py
multi-agent-insurance-project-main/app/utils/: react_parser.py  token_counter.py
multi-agent-insurance-project-main/scripts/: seed_chroma.py  seed_db.py
multi-agent-insurance-project-main/tests/: conftest.py  test_chat.py  test_context.py  test_database.py  test_events.py  test_exceptions.py  test_graph.py  test_health.py  test_integration.py  test_llm.py  test_rag.py  test_react_parser.py  test_tools.py
