[project]
name = "insurance-agent-api"
version = "0.1.0"
description = "Multi-agent insurance support API powered by local LLMs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.0.0",
    "langgraph>=0.2.0",
    "sse-starlette>=2.0.0",
    "onnxruntime<1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
